--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jan 20 20:08:29 EST 2026
-sdk.dir=C\:\\Users\\mvege\\AppData\\Local\\Android\\Sdk
+#Tue Jan 27 22:59:40 EST 2026
+sdk.dir=C\:\\Users\\jamel\\AppData\\Local\\Android\\Sdk
